Fixed bug #35655 (whitespace following end of heredoc is lost).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@202766 c90b9560-bf6c-de11-be94-00142212c4b1